--- a/FYPM.csproj
+++ b/FYPM.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -46,10 +47,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <HintPath>packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -130,52 +134,66 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
+    <Compile Include="Controllers\TaskController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\FYP.Context.cs">
+    <Compile Include="Models\FYP_MSModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FYP.Context.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\FYP.cs">
+    <Compile Include="Models\FYP_MSModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\FYP.Designer.cs">
+    <Compile Include="Models\FYP_MSModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>FYP.edmx</DependentUpon>
+      <DependentUpon>FYP_MSModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Meeting.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Message.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProjectDetail.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProjectDocument.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ProjectList.cs">
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Result.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagrams_Result.cs">
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Task.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Timetable.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\User.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\UserType.cs">
-      <DependentUpon>FYP.tt</DependentUpon>
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModel\TaskViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ValidationService.cs" />
   </ItemGroup>
@@ -199,15 +217,15 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\FYP.Context.tt">
+    <Content Include="Models\FYP_MSModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>FYP.Context.cs</LastGenOutput>
-      <DependentUpon>FYP.edmx</DependentUpon>
+      <DependentUpon>FYP_MSModel.edmx</DependentUpon>
+      <LastGenOutput>FYP_MSModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\FYP.tt">
+    <Content Include="Models\FYP_MSModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>FYP.edmx</DependentUpon>
-      <LastGenOutput>FYP.cs</LastGenOutput>
+      <DependentUpon>FYP_MSModel.edmx</DependentUpon>
+      <LastGenOutput>FYP_MSModel.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -215,12 +233,12 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <EntityDeploy Include="Models\FYP.edmx">
+    <EntityDeploy Include="Models\FYP_MSModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>FYP.Designer.cs</LastGenOutput>
+      <LastGenOutput>FYP_MSModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\FYP.edmx.diagram">
-      <DependentUpon>FYP.edmx</DependentUpon>
+    <Content Include="Models\FYP_MSModel.edmx.diagram">
+      <DependentUpon>FYP_MSModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -253,6 +271,11 @@
     <Content Include="Views\Project\UploadProject.cshtml" />
     <Content Include="Views\Project\EditProject.cshtml" />
     <Content Include="Views\Project\ProjectGrid.cshtml" />
+    <Content Include="Views\Project\StudentProjectGrid.cshtml" />
+    <Content Include="Views\Task\Task.cshtml" />
+    <Content Include="Views\Task\AddTask.cshtml" />
+    <Content Include="Views\Task\EditTask.cshtml" />
+    <Content Include="Views\Task\StudentTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -320,7 +343,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
