--- a/FYPM.csproj
+++ b/FYPM.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -178,6 +179,9 @@
     <Compile Include="Models\sp_helpdiagrams_Result.cs">
       <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\StudentProjectRequest.cs">
+      <DependentUpon>FYP_MSModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
@@ -193,6 +197,7 @@
     <Compile Include="Models\UserType.cs">
       <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModel\MessageViewModel.cs" />
     <Compile Include="Models\ViewModel\TaskViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ValidationService.cs" />
@@ -277,6 +282,8 @@
     <Content Include="Views\Task\EditTask.cshtml" />
     <Content Include="Views\Task\StudentTask.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Messages\Message.cshtml" />
+    <Content Include="Views\Project\ProjectRequests.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
