--- a/Web.config
+++ b/Web.config
@@ -60,7 +60,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="FYP_MSEntities" connectionString="metadata=res://*/Models.FYP.csdl|res://*/Models.FYP.ssdl|res://*/Models.FYP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="FYP_MSEntities1" connectionString="metadata=res://*/Models.FYP_MSModel.csdl|res://*/Models.FYP_MSModel.ssdl|res://*/Models.FYP_MSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="FYP_MSEntities" connectionString="metadata=res://*/Models.FYP.csdl|res://*/Models.FYP.ssdl|res://*/Models.FYP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FYP_MSEntities1" connectionString="metadata=res://*/Models.FYP_MSModel.csdl|res://*/Models.FYP_MSModel.ssdl|res://*/Models.FYP_MSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
