--- a/FYPM.csproj
+++ b/FYPM.csproj
@@ -135,7 +135,9 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
+    <Compile Include="Controllers\ResultController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
+    <Compile Include="Controllers\TimeTableController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -198,7 +200,10 @@
       <DependentUpon>FYP_MSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModel\MessageViewModel.cs" />
+    <Compile Include="Models\ViewModel\ProjectSupervisor.cs" />
+    <Compile Include="Models\ViewModel\ResultViewModel.cs" />
     <Compile Include="Models\ViewModel\TaskViewModel.cs" />
+    <Compile Include="Models\ViewModel\TimetableViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ValidationService.cs" />
   </ItemGroup>
@@ -284,6 +289,11 @@
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Messages\Message.cshtml" />
     <Content Include="Views\Project\ProjectRequests.cshtml" />
+    <Content Include="Views\TimeTable\AddTimetable.cshtml" />
+    <Content Include="Views\TimeTable\TimeTable.cshtml" />
+    <Content Include="Views\Result\AddResult.cshtml" />
+    <Content Include="Views\Result\Result.cshtml" />
+    <Content Include="Views\Result\StudentResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
