--- a/Web.config
+++ b/Web.config
@@ -61,8 +61,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="FYP_MSEntities" connectionString="metadata=res://*/Models.FYP.csdl|res://*/Models.FYP.ssdl|res://*/Models.FYP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="FYP_MSEntities1" connectionString="metadata=res://*/Models.FYP_MSModel.csdl|res://*/Models.FYP_MSModel.ssdl|res://*/Models.FYP_MSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FATIMA-MUGHAL\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FYP_MSEntities" connectionString="metadata=res://*/Models.FYP.csdl|res://*/Models.FYP.ssdl|res://*/Models.FYP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-24J0FB2\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FYP_MSEntities1" connectionString="metadata=res://*/Models.FYP_MSModel.csdl|res://*/Models.FYP_MSModel.ssdl|res://*/Models.FYP_MSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-24J0FB2\SQLEXPRESS;initial catalog=FYP_MS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
