--- a/FYPM.csproj
+++ b/FYPM.csproj
@@ -319,6 +319,7 @@
     <Content Include="Views\Meeting\Meetings.cshtml" />
     <Content Include="Views\Meeting\AddMeetings.cshtml" />
     <Content Include="Views\Meeting\StartMeeting.cshtml" />
+    <Content Include="Views\Project\StudentProject.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
