--- a/Web.config
+++ b/Web.config
@@ -13,9 +13,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="TwilioAccountSid" value="AC66d0c98f4daedd97410a92307386c62b" />
-	  <add key="TwilioAuthToken" value="7a5063806b1433de80234d635e7e25bd" />
-	  <add key="TwilioPhoneNumber" value="+16815324812" />
+	  
+	  <add key="config:AccountSid" value="AC66d0c98f4daedd97410a92307386c62b"/>
+	  <!--Replace with your AccountSid-->
+	  <add key="config:AuthToken" value="ebea45833792178bf2ae72c7f9aaed9e"/>
+	  <!--Replace with your AuthToken-->
+	  <add key="config:TwilioPhoneNum" value="+16815324812"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
