--- a/FYPM.csproj
+++ b/FYPM.csproj
@@ -420,6 +420,9 @@
     <Content Include="Views\Meeting\AddMeetings.cshtml" />
     <Content Include="Views\Meeting\StartMeeting.cshtml" />
     <Content Include="Views\Project\StudentProject.cshtml" />
+    <Content Include="Views\Messages\GetSms.cshtml" />
+    <Content Include="Views\Messages\Create.cshtml" />
+    <Content Include="Views\Messages\SendSms.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
